--- a/index.html
+++ b/index.html
@@ -3,11 +3,12 @@
 
 <head>
     <meta charset="UTF-8">
-    <title>Hello Fuckwads!</title>
+    <title>Hello World.</title>
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" type="text/css" href="stylesheet.css" />
 </head>
 <body>
-    <span>Hello Fuckwads!</span>
+    <span id="textSpan">"Hello World."</span>
+    <script src="javascript.js"></script>
 </body>
 </html>
